--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "type": "commonjs",
   "description": "",
   "main": "index.js",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://127.0.0.1:5000",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./index.js"
